--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,8 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron jumbotron-fluid">
+
+  <div class="container">
+    <h1 class="display-4">Guitar App</h1>
+    <p class="lead">Esta es una aplicacion de guitarras hecha en Angular.</p>
+  </div>
+
+</div>
