Home component + Routes
The home component is working. Additionally, the routes were created and configured. Other components were also created.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
 
   <div class="container">
     <h1 class="display-4">Guitar App</h1>
-    <p class="lead">Esta es una aplicacion de guitarras hecha en Angular.</p>
+    <p class="lead">Esta es una aplicacion de guitarras hecha con Angular.</p>
   </div>
 
 </div>
