Routes + Home and About Components
The Home route, Guitars route & About  routes was created and they are already working.

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,3 +1,36 @@
-<p>
-  about works!
+<h1 class="animated fadeIn fast"> Sobre Guitar App</h1>
+<hr>
+<p class="animated fadeIn fast">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 </p>
+
+<section >
+  <div class="container ">
+
+    <div class="row justify-content-between align-items-center">
+      <div class="col-lg-6 feature-left">
+        <img class="img-fluid" src="assets/img/f.jpg" alt="">
+      </div>
+      <div class="col-lg-6 feature-right animated fadeIn fast">
+        <div>
+          <h4>Smart Security</h4>
+          <p>
+            Growing up in Michigan, I was lucky enough to experience one part of the Great Lakes. And let me assure you, they are great. As a photojournalist.
+          </p>
+        </div>
+        <div>
+          <h4>Unlimited Colors</h4>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div>
+          <h4>Endless Support</h4>
+          <p>
+            The diseases most commonly seen in travellers are diarrhoea, malaria if you travel in a malaria-infested area, accidents when travelling.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
