--- a/src/app/components/guitars/guitars.component.html
+++ b/src/app/components/guitars/guitars.component.html
@@ -3,12 +3,12 @@
 
 <div class="card-columns">
 
-  <div class="card">
-    <img class="card-img-top" src="assets/img/fenderacoustic.png" alt="Card image cap">
+  <div class="card" *ngFor="let guitar of guitars">
+    <img class="card-img-top" [src]="guitar.img" [alt]="guitar.nombre">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">{{ guitar.nombre }}</h5>
+      <p class="card-text">{{ guitar.description }}</p>
+      <p class="card-text"><small class="text-muted">{{guitar.strings}}</small></p>
 
       <button type="button" class="btn btn-outline-primary btn-block">
         Ver mas...
