--- a/src/app/components/guitar/guitar.component.html
+++ b/src/app/components/guitar/guitar.component.html
@@ -1,3 +1,27 @@
-<p>
-  guitar works!
-</p>
+<h1> {{ guitar.name }} <small> {{guitar.strings}} </small></h1>
+
+<hr>
+
+<div class="row">
+
+  <div class="col-md-4">
+
+    <img [src]="guitar.img" class="img-fluid" alt="{{guitar.name}}">
+    <br><br>
+    <a [routerLink]="['/guitars']" class="btn btn-outline-danger btn-block"> Regresar </a>
+  </div>
+
+  <div class="col-md-8">
+    <h3>{{ guitar.name }}</h3>
+    <hr>
+    <p>
+      {{ guitar.description }}
+    </p>
+    <div>
+
+      <img src="{{guitar.brand}}" class="img-fluid" alt="">
+    </div>
+  </div>
+
+
+</div>
