--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,18 @@
 <h1> Buscando: <small>  {{ term }} </small></h1>
 <hr>
 
+
+<div class="row" *ngIf="guitars.length == 0">
+  <div class="col-md-12">
+    <div class="alert alert-info" role="alert">
+      No existen resultados con el termino: {{ term }}
+    </div>
+
+  </div>
+
+</div>
+
+
 <div class="card-columns">
 
   <div class="card animated fadeIn fast" *ngFor="let guitar of guitars; let i=index">
